<resources>
    <string name="app_name">MyNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="business">Business</string>
    <string name="action_search">Search</string>
    <string name="help_txt">This application was created to send articles from the New York Times that may interest you.</string>
    <string name="about_txt">This application was created as part of an OpenClassrooms learning project.</string>
    <string name="openclassrooms">OpenClassrooms</string>
    <string name="art_and_design"><![CDATA[Art & Design]]></string>
    <string name="search">Search...</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>

</resources>
