<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_query_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search query term"
        android:padding="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/fields_begin_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_begin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Begin Date"/>

                <Button
                    android:id="@+id/button_being_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_begin_date"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    style="?android:attr/spinnerStyle"/>

            </RelativeLayout>


            <CheckBox
                android:id="@+id/checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arts" />

            <CheckBox
                android:id="@+id/checkbox_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Business" />

            <CheckBox
                android:id="@+id/checkbox_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Entrepreneurs" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/fields_end_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="End Date"/>

                <Button
                    android:id="@+id/button_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_end_date"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    style="?android:attr/spinnerStyle"/>
            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkbox_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Politics" />

            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sports" />

            <CheckBox
                android:id="@+id/checkbox_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Travel" />


        </LinearLayout>
    </LinearLayout>



</LinearLayout>