<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="Search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notifications"
        android:title="Notifications"
        app:showAsAction="never"/>
    <item
        android:id="@+id/help"
        android:title="Help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="About"
        app:showAsAction="never"/>

</menu>